# matchfit

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d161a610d29_merge_heads.py  1fe590117cab_match_added_without_fk_chat.py  20f28c3f53c2_merge_heads.py  3a2a0500089f_make_chronotype_required.py  3e49734fab2c_merge_heads_two.py  564914fa2257_add_location_name_to_profile.py  69fbda9f2ea9_add_goal_description.py  6b07a82adc84_merge_all_heads.py  77c8f8d373b8_add_image_to_events.py  78c722921263_fix_matches_fk_and_notification_enum.py  7cc916ce015a_add_google_id_and_make_password_nullable.py  8d4c7c7e38a1_add_sports_tables.py  9920b6f7932a_auto.py  9eb80ba29db8_add_users_table.py  a10e73323fb1_profile_added.py  a1b2c3d4e5f6_create_notifications_and_translations.py  a63319362e41_fix_sports_icons.py  aaeec9ded446_merge_messenger_and_postgis_migrations.py  afd642ddfbaa_make_password_hash_required.py  b1bec49399f8_birthdate_to_profile.py  b5b08db33120_goals_added.py  c3286e784c20_create_events_table.py  c3dd0eb97e4a_add_chat_id_in_event.py  ce24fcdbe59f_seed_sports_data.py  d858ea0419a0_add_event_participants_model.py  d8dc0f26fda9_merge_heads_three.py  db9625235aff_add_is_system_to_messages.py  dfbda5f5e16c_merge_postgis_and_birthdate.py  e40e0e7e2820_add_messenger_tables.py  e5508f51c61e_add_bio_and_languages_to_profile.py  e740b80dba97_merge_heads.py  e93cb1ad8eeb_merge_heads.py  (+3 more)
backend/app/: __init__.py  cli.py
backend/tests/: conftest.py
(+336 files in other folders)
